Update matcha latte description and add image
Added an image and modified the comment on the sugar amount for the new matcha latte.

--- a/2026-01-26.md
+++ b/2026-01-26.md
@@ -1,2 +1,2 @@
-關於星巴克停賣抹茶那堤改成醇濃抹茶那堤，沒有特別說的話店員會按四下糖漿，我覺得是三下也可以。
-
+關於星巴克停賣抹茶那堤改成醇濃抹茶那堤，沒有特別說的話店員會按四下糖漿，我是覺得三下也可以，不會太甜。
+![matchalattebear](https://github.com/user-attachments/assets/0bdfa9c5-f68d-4b24-b4b6-1ad0c18cf51a)
